# robocar_v2

./: .gitignore  .gitmodules  README.md  README.rst
catkin_ws/src/avoid_obstacles/: CMakeLists.txt  package.xml
catkin_ws/src/avoid_obstacles/launch/: avoid.launch
catkin_ws/src/avoid_obstacles/scripts/: obstacle_detection.py
catkin_ws/src/avoid_obstacles/src/: obstacle_detection.py
catkin_ws/src/detectors/: odometry_as_rotary_encoder.ino  read_usb_mouse.py
catkin_ws/src/driver/: CMakeLists.txt  README.rst  package.xml  requirements.txt
catkin_ws/src/driver/launch/: driver1.launch
catkin_ws/src/driver/src/: driver.py
catkin_ws/src/lane_follow/: CMakeLists.txt  README.rst  package.xml  requirements.txt
catkin_ws/src/lane_follow/launch/: lf_node_default.launch  test_node.launch
catkin_ws/src/lane_follow/src/: birds_eye_node.py  debug_lane_follow.py  fit_polynomial_node.py  img_helpers.py  img_messages.py  lane_follow_node.py  lane_follower.py  lf_node.py  test_camera_node.py  treshold_node.py
catkin_ws/src/lane_follow/src/lf/: lane_follower.py
catkin_ws/src/mouse_odometry/: CMakeLists.txt  package.xml
catkin_ws/src/mouse_odometry/src/: mouse_odometry.py  odom_tf_node.py
catkin_ws/src/pid_controller/: CMakeLists.txt  package.xml
catkin_ws/src/pid_controller/launch/: pid.launch
catkin_ws/src/pid_controller/src/: control_supervisor.py  controller.py  gtg.py  pid.py  pid_controller.py  pid_supervisor.py  yaw_controller.py
catkin_ws/src/robocar_ackermann_description/: CMakeLists.txt  package.xml
catkin_ws/src/robocar_ackermann_description/urdf/: car.xacro  dummy_model.xacro  wheels.xacro
catkin_ws/src/robocar_config/: CMakeLists.txt  camera_calibration.yaml  realsense.yaml
catkin_ws/src/robocar_config/launch/: raspicam_1280x960_10fps.launch
catkin_ws/src/robocar_description/: CMakeLists.txt  package.xml
catkin_ws/src/robocar_description/config/: diffdrive.yaml  gazebo_ros_control_params.yaml
catkin_ws/src/robocar_description/launch/: diffdrive.launch  display.launch  gazebo.launch
catkin_ws/src/robocar_description/models/lane_marking/: model.config  model.sdf  track_middle.dae  track_tex.dae
catkin_ws/src/robocar_description/models/lane_marking/materials/scripts/: marking_dashed.material
catkin_ws/src/robocar_description/rviz/: urdf.rviz
catkin_ws/src/robocar_description/urdf/: road.world  road_boxes.world  road_boxes2.world  robocar.urdf
catkin_ws/src/robocar_main/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robocar_main/launch/: robocar.launch
catkin_ws/src/robocar_main/launch/components/: controller.launch  hardware.launch
catkin_ws/src/robocar_main/rviz/: robocar.rviz
catkin_ws/src/robocar_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/robocar_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/robocar_simulation/config/: em_3905_joint_ctrlr_params.yaml  robocar.rviz  sim_camera_calibration.yaml  wheel.yaml
catkin_ws/src/robocar_simulation/launch/: robocar_sim.launch  robocar_sim_conde.launch
catkin_ws/src/robocar_simulation/src/: ackermann_controller.py  marker_publisher.py  wheel_controller.py
catkin_ws/src/robocar_world/: CMakeLists.txt  package.xml
catkin_ws/src/robocar_world/models/conde_world/: model.sdf
catkin_ws/src/robocar_world/models/conde_world/materials/scripts/: floor.material
catkin_ws/src/robocar_world/models/lane_marking/: README.md  model.config  model.sdf  track3.blend  track_solid.dae
catkin_ws/src/robocar_world/models/lane_marking/materials/scripts/: marking_dashed.material  marking_solid.material
catkin_ws/src/robocar_world/models/lane_marking/materials/textures/: lane_markings.kra
catkin_ws/src/robocar_world/models/reference_box/: model.config  model.sdf
catkin_ws/src/robocar_world/models/straight_road_world/: model.config  model.sdf
catkin_ws/src/robocar_world/models/straight_road_world/materials/scripts/: floor.material
catkin_ws/src/robocar_world/models/track/: README.md  model.config  model.sdf  track3.blend
catkin_ws/src/robocar_world/worlds/: conde.world  road.world  straight_road.world
catkin_ws/src/waypoint_follower/: CMakeLists.txt  package.xml
catkin_ws/src/waypoint_follower/include/: libwaypoint_follower.h  pure_pursuit_core.h
catkin_ws/src/waypoint_follower/lib/: libwaypoint_follower.cpp
catkin_ws/src/waypoint_follower/src/: pure_pursuit.cpp  pure_pursuit_core.cpp
catkin_ws/src/waypoint_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/waypoint_publisher/src/: waypoint_memo.py  waypoint_publisher.py
nb/: edge_detection.ipynb
pictures/: robocar_v2.drawio
scripts/: dummy_driver.launch
