<?xml version="1.0"?>
<package format="2">
  <name>robocar_description</name>
  <version>0.0.0</version>
  <description>The robocar_description package</description>
  <maintainer email="stacy.chaikovska@gmail.com">Stacy</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
