<?xml version="1.0"?>
<package format="2">
  <name>robocar_main</name>
  <version>0.0.1</version>
  <description>The robocar_main package</description>
  <maintainer email="serge-m@users.noreply.github.com">SergeM</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/serge-m/robocar_v2/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
